add song seeds and show+index routes

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Welcome to Jazz Robot</h1>
 <p>Nothing on this site is working yet. You actually shouldn't be here.</p>
-<%= link_to songs_path %>
+<%= link_to "Songs", songs_path %>
+<br>
+<p>by Adam Czerepinski 2015</p>
