--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome to Jazz Robot</h1>
-<p>Nothing on this site is working yet. You actually shouldn't be here.</p>
-<%= link_to "Songs", songs_path %>
+<p>I built Jazz Robot to help musicians improve in the most efficient way possible.</p>
 <br>
 <p>by Adam Czerepinski 2015</p>
+<br>
+<p>(Links to Github and stuff like that)</p>
