--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Welcome to Jazz Robot</h1>
-<p>I built Jazz Robot to help musicians improve in the most efficient way possible.</p>
+<p>I'm building Jazz Robot to help musicians improve in the most efficient way possible.</p>
 <br>
-<p>by Adam Czerepinski 2015</p>
+<p>The site is "pre-release" and undergoing constant development.</p>
 <br>
-<p>(Links to Github and stuff like that)</p>
+<p>For more info about me, <a href="http://www.adamcz.com">visit my website.</a></p>
+<br>
+<p>- Adam Czerepinski, 2015</p>
