--- a/app/views/songs/_keys.html.erb
+++ b/app/views/songs/_keys.html.erb
@@ -1,14 +1,6 @@
 <div id="keys">
-  <button class="btn btn-primary col-xs-2 col-md-1">A</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">Bb</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">B</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">C</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">Db</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">D</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">Eb</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">E</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">F</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">Gb</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">G</button>
-  <button class="btn btn-primary col-xs-2 col-md-1">Ab</button>
+  <% ["A", "Bb", "B", "C", "Db", "D", "Eb", "E", "F", "Gb", "G", "Ab"].each do |key| %>
+    <%= button_to "#{key}", song_path(@song.id), method: :get, class: "btn btn-primary col-xs-3 col-md-2", params: {key: "#{key.downcase}"} %>
+  <% end %>
+  <%= button_to "Functional Analysis", song_path(@song.id), method: :get, class: "btn btn-success col-xs-12" %>
 </div>
