--- a/app/views/songs/_song_chords.html.erb
+++ b/app/views/songs/_song_chords.html.erb
@@ -1,5 +1,5 @@
 <div class="row chords">
-  <% @transposed_song.each do |measure| %>
+  <% @song_chords.each do |measure| %>
     <span class="col-xs-3">
       <% measure.each do |chord| %>
         <%= chord %>
