correct enharmonic spellings and add basic readme

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,10 @@
-<h1>Welcome to Jazz Robot</h1>
-<p>I'm building Jazz Robot to help musicians improve in the most efficient way possible.</p>
+<h1>Learn to play in all 12 keys! </h1>
+<p>Jazz Robot can help you improve in the most efficient way possible.</p>
 <br>
-<p>The site is "pre-release" and undergoing constant development.</p>
+<p>The site currently assumes an ability to read and improvise from chord changes. I recommend loading the site in the practice room, and improvising along with a metronome. Jumping back and forth between literal chord changes and roman numeral analysis is an effective way to ease the learning curve of thinking about chords by their function.</p>
+<br>
+<p>Jazz Robot is "pre-release" and undergoing constant development.</p>
 <br>
 <p>For more info about me, <a href="http://www.adamcz.com">visit my website.</a></p>
 <br>
-<p>- Adam Czerepinski, 2015</p>
+<p>- Adam Czerepinski</p>
