add fonts and colors

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,7 @@
-<h1>Learn to play in all 12 keys! </h1>
-<p>Jazz Robot can help you improve in the most efficient way possible.</p>
-<br>
-<p>The site currently assumes an ability to read and improvise from chord changes. I recommend loading the site in the practice room, and improvising along with a metronome. Jumping back and forth between literal chord changes and roman numeral analysis is an effective way to ease the learning curve of thinking about chords by their function.</p>
-<br>
-<p>Jazz Robot is "pre-release" and undergoing constant development.</p>
-<br>
-<p>For more info about me, <a href="http://www.adamcz.com">visit my website.</a></p>
-<br>
-<p>- Adam Czerepinski</p>
+<div class="content">
+  <h1>MASTER PLAYING IN ALL 12 KEYS </h1>
+  
+  <p class="about">Jazz Robot is your personal assistant in the practice room. Practice songs in any of the 12 keys, or bypass chord changes and read directly from functional analysis.</p>
+  <br>
+  <p>Jazz Robot is "pre-release" and undergoing constant development by <a href="http://www.adamcz.com">Adam Czerepinski</a>.</p>
+</div>
