--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,6 @@
-<h1><%= @song.name %></h1>
+<div class="text-center">
+  <h1><%= @song.name.upcase %></h1>
+</div>
+
 <%= render 'song_chords' %>
 <%= render 'keys' %>
