--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,27 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
- <nav role="navigation" class="navbar navbar-default">
-     <!-- Brand and toggle get grouped for better mobile display -->
+  <nav role="navigation" class="navbar navbar-default navbar-static-top">
+  <div class="container">
      <div class="navbar-header">
-         <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-             <span class="sr-only">Toggle navigation</span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-             <span class="icon-bar"></span>
-         </button>
-         <a href="<%= root_path %>" class="navbar-brand">Jazz Robot</a>
-     </div>
-     <!-- Collection of nav links and other content for toggling -->
-     <div id="navbarCollapse" class="collapse navbar-collapse">
-         <ul class="nav navbar-nav">
-             <li class="active"><a href="<%= root_path %>">Home</a></li>
-             <li><a href="<%= songs_path %>">Songs</a></li>
-         </ul>
-         <ul class="nav navbar-nav navbar-right">
-             <li><a href="/users/login">Login</a></li>
-         </ul>
-     </div>
+        <a href="<%= root_path %>" class="navbar-brand">JAZZ ROBOT</a>
+      <ul class="nav navbar-nav">
+        <li><a href="<%= songs_path %>">SONGS</a></li>
+      </ul>
+    </div>
+  </div><!-- container -->
+     
   </nav>
 
 <%= yield %>
