--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,7 +1,9 @@
-<h1>So many songs!</h1>
+<div class="content">
+<h1>SONG INDEX</h1>
 <br>
-<ul>
+<ul class="list-unstyled">
 <% @songs.each do |song| %>
   <li><%= link_to song.name, song_path(song.id) %></li>
 <% end %>
 </ul>
+</div>
