--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,7 @@
  *= require_self
  */
 
-@import url(http://fonts.googleapis.com/css?family=Montserrat|Titillium+Web);
+@import url(https://fonts.googleapis.com/css?family=Montserrat|Titillium+Web);
 
 h1 {
   font-family: 'Montserrat', sans-serif;
