--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,11 @@
 <div class="content">
-  <h1>MASTER PLAYING IN ALL 12 KEYS </h1>
-  
-  <p class="about">Jazz Robot is your personal assistant in the practice room. Practice songs in any of the 12 keys, or bypass chord changes and read directly from functional analysis.</p>
-  <br>
-  <p>Jazz Robot is "pre-release" and undergoing constant development by <a href="http://www.adamcz.com">Adam Czerepinski</a>.</p>
+  <div class="center-center">
+    <h1>MASTER ALL 12 KEYS </h1>
+    <button class="btn btn-white"><a href="<%= songs_path %>">GET STARTED</a></button>
+  </div>
 </div>
+<footer class="footer">
+  <div class="container">
+    <p>Jazz Robot &copy 2015 <a href="http://www.adamcz.com" target="_blank">Adam Czerepinski</a></p>
+  </div>
+</footer>
