--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
         <a href="<%= root_path %>" class="navbar-brand">JAZZ ROBOT</a>
       <ul class="nav navbar-nav">
         <li><a href="<%= songs_path %>">SONGS</a></li>
+        <li><a href="<%= games_path %>">GAME</a></li>
       </ul>
     </div>
   </div><!-- container -->
