add game data and json endpoint

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -44,3 +44,13 @@
   color: #fff;
   }
 }
+
+.btn-next-level {
+  float: right;
+  background-color: #8080B3;
+  border: 1px #343477 solid;
+  &:hover {
+    background-color: #343477;
+  }
+  
+}
