--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -5,8 +5,4 @@
     <button class="btn btn-white"><a href="<%= game_path(1) %>">LEVEL 1</a></button>
   </div>
 </div>
-<footer class="footer">
-  <div class="container">
-    <p>Jazz Robot &copy 2015 <a href="http://www.adamcz.com" target="_blank">Adam Czerepinski</a></p>
-  </div>
-</footer>
+<%= render :partial => 'layouts/footer' %>
