--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,16 +3,20 @@
 </div>
 <div class="row">
   <div class="col-xs-12 col-sm-10 col-sm-offset-1 game-board">
-    <p class="col-xs-6 text-left">QUESTION: <kbd><span id="questionNumber">1</span></kbd></p>
-    <p class="col-xs-6 text-right">Your score: <kbd><span id="score">0</span></kbd>
-    <p class="text-center col-xs-12">In the key of <span id="questionKey">C</span>, what chord functions as <span id="questionChord">IMaj7</span>?</p>
+    <p class="col-xs-6 text-left">QUESTION: <kbd><span id="questionNumber"></span></kbd></p>
+    <p class="col-xs-6 text-right">YOUR SCORE: <kbd><span id="score"></span></kbd>
+    <p class="text-center col-xs-12">
+    In the key of <span id="questionKey">_</span>, what chord functions as <span id="questionChord">_</span>?
+    </p>
    
       <div class="game-answer">
         <form action="">
-          <input type="text" name="answer" value="CMaj7" class="game-answer-input"><br>
+          <input type="text" name="answer" value="CMaj7" class="game-answer-input" autofocus><br>
           <input type="submit" value="SUBMIT" class="game-answer-submit">  
         </form>
       </div><!-- /game-answer -->
-
+      <button class="btn btn-next-level hidden"><a href="<%= game_path(@game.id + 1) %>">CONTINUE TO LEVEL <%= @game.id + 1 %></a></button>
   </div><!-- /game-board -->
 </div><!-- /row -->
+<div id="level-data"
+<%= render :partial => 'layouts/footer' %>
