maintain score between levels

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -22,7 +22,7 @@
 }
 
 .game-answer-input {
-  color: #AAA;
+  color: #343477;
   margin: 10px;
   border: 1px #343477 solid;
   font-family: 'Titillium Web', sans-serif;
