--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,7 @@
 <div class="content">
   <div class="center-center">
     <h1>JAZZ ROBOT - THE GAME</h1>
-    <p>Master jazz harmony. Build an army of jazz cyborgs.</p>
+    <p>Develop your mastery of jazz harmony by thinking about chord functionality.</p>
     <button class="btn btn-white"><a href="<%= game_path(1) %>">LEVEL 1</a></button>
   </div>
 </div>
