--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -11,7 +11,7 @@
    
       <div class="game-answer">
         <form action="">
-          <input type="text" name="answer" value="CMaj7" class="game-answer-input" autofocus><br>
+          <input type="text" name="answer" placeholder="CMaj7" class="game-answer-input" autofocus><br>
           <input type="submit" value="SUBMIT" class="game-answer-submit">  
         </form>
       </div><!-- /game-answer -->
