add title and chord react components

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <ul class="nav navbar-nav">
         <li><a href="<%= songs_path %>">SONGS</a></li>
         <li><a href="<%= games_path %>">GAME</a></li>
+        <li><a href="<%= song_jam_path(1) %>">JAM</a></li>
       </ul>
     </div>
   </div><!-- container -->
